<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context="ekylibre.zero.inter.fragment.ProcedureFamilyChoiceFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/administering"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/animal_farming"
        android:text="@string/administering"
        android:padding="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/basic_button_light"
        android:drawableStart="@drawable/icon_admin"
        app:layout_constraintVertical_chainStyle="spread_inside"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/animal_farming"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/administering"
        app:layout_constraintBottom_toTopOf="@id/plant_farming"
        android:text="@string/animal_farming"
        android:padding="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/basic_button_light"
        android:drawableStart="@drawable/icon_cow"
        app:layout_constraintVertical_chainStyle="spread_inside"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/plant_farming"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/animal_farming"
        app:layout_constraintBottom_toTopOf="@id/processing"
        android:text="@string/plant_farming"
        android:padding="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/basic_button_light"
        android:drawableStart="@drawable/icon_plant"
        app:layout_constraintVertical_chainStyle="spread_inside"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/processing"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/plant_farming"
        app:layout_constraintBottom_toTopOf="@id/tool_maintaining"
        android:text="@string/processing"
        android:padding="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/basic_button_light"
        android:drawableStart="@drawable/icon_manufacturing"
        app:layout_constraintVertical_chainStyle="spread_inside"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tool_maintaining"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/processing"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/tool_maintaining"
        android:padding="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/basic_button_light"
        android:drawableStart="@drawable/icon_screwdriver"
        app:layout_constraintVertical_chainStyle="spread_inside"/>

</androidx.constraintlayout.widget.ConstraintLayout>